--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,8 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<!-- thymeleaf 사용으로 인한 jsp 의존성 주석 처리 -->
+<!--
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
@@ -83,13 +85,12 @@
 			<version>2.3.3</version>
 			<scope>provided</scope>
 		</dependency>
+-->
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
-
-
 	</dependencies>
 
 	<build>
@@ -99,24 +100,5 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
-<!--		<resources>-->
-<!--			<resource>-->
-<!--				<directory>src/main/resources</directory>-->
-<!--			</resource>-->
-<!--			<resource>-->
-<!--				<directory>src/main/java</directory>-->
-<!--				<includes>-->
-<!--					<include>**/*.xml</include>-->
-<!--				</includes>-->
-<!--			</resource>-->
-<!--			<resource>-->
-<!--				<directory>src/main/resources</directory>-->
-<!--				<includes>-->
-<!--					<include>**/*.xml</include>-->
-<!--					<include>**/*.properties</include>-->
-<!--					<include>**/*.setting</include>-->
-<!--				</includes>-->
-<!--			</resource>-->
-<!--		</resources>-->
 	</build>
 </project>
