--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,3 +34,5 @@ server.port=8080
 #server.servlet.encoding.charset=UTF-8
 #server.servlet.encoding.enabled=true
 #server.servlet.encoding.force=true
+
+server.servlet.jsp.init-parameters.development=true
