[FEAT] 마이페이지 프로필 임시

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,3 +36,5 @@ server.port=8080
 #server.servlet.encoding.force=true
 
 server.servlet.jsp.init-parameters.development=true
+
+upload.path=/path/to/your/upload/directory/
