--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,6 +32,6 @@ server.port=8080
 
 server.servlet.jsp.init-parameters.development=true
 
-spring.jpa.open-in-view= true
-spring.jpa.hibernate.ddl-auto= update
-spring.jpa.defer-datasource-initialization= true
+#spring.jpa.open-in-view= true
+#spring.jpa.hibernate.ddl-auto= update
+#spring.jpa.defer-datasource-initialization= true
