[FEAT] market 장바구니 버튼 클릭 시 구현

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,9 +30,9 @@ logging.level.com.example.jpetstore.dao.mybatis.mapper=INFO
 
 server.port=8080
 
-#spring.jpa.open-in-view= true
-#spring.jpa.hibernate.ddl-auto= update
-#spring.jpa.defer-datasource-initialization= true
+spring.jpa.open-in-view= true
+spring.jpa.hibernate.ddl-auto= update
+spring.jpa.defer-datasource-initialization= true
 
 server.servlet.jsp.init-parameters.development=true
 
