--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,4 +36,8 @@ spring.jpa.defer-datasource-initialization= true
 
 server.servlet.jsp.init-parameters.development=true
 
-upload.path=/path/to/your/upload/directory/
+upload.path=/your/upload/path
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=2MB
