--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,3 +37,7 @@ spring.jpa.defer-datasource-initialization= true
 server.servlet.jsp.init-parameters.development=true
 
 upload.path=/path/to/your/upload/directory/
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
