--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,5 +40,5 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
-upload.path=/your/upload/path
+file.upload-dir=src/main/resources/static/images/
 
