--- a/pom.xml
+++ b/pom.xml
@@ -103,7 +103,12 @@
 			<artifactId>spring-boot-devtools</artifactId>
 			<version>3.2.5</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
